ingress-manifests/prometheus-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prom
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
